Closed
Bug 1458045
Opened 8 years ago
Closed 2 years ago
Strange error message from exponentialRampToValueAtTime
Categories
(Core :: Web Audio, defect, P2)
Tracking
()
RESOLVED
FIXED
120 Branch
People
(Reporter: toy.raymond, Assigned: karlt)
References
()
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.117 Safari/537.36
Steps to reproduce:
In console:
c = new AudioContext()
g = new GainNode(c)
g.gain.exponentialRampToValueAtTime(-2, 5)
Actual results:
Error signaled:
SyntaxError: An invalid or illegal string was specified
Expected results:
I was expecting this to either work, or at least a different error message.
It's not illegal (anymore) to give an negative value for exponentialRampToValue(). There are some constraints, however in the spec:
https://webaudio.github.io/web-audio-api/#dom-audioparam-exponentialramptovalueattime
Comment 1•8 years ago
|
||
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:61.0) Gecko/20100101 Firefox/61.0
Build ID: 20180503100146
I have managed to reproduce this issue on the latest FF release (59) and the latest Nightly build 61.0a1 (2018-05-03).
The issue occurs regardless of the OS used.
Based on the description and the tests executed, I will mark this bug as NEW.
Status: UNCONFIRMED → NEW
status-firefox59:
--- → affected
status-firefox60:
--- → affected
status-firefox61:
--- → affected
Component: Untriaged → Web Audio
Ever confirmed: true
OS: Unspecified → All
Product: Firefox → Core
Hardware: Unspecified → All
Updated•8 years ago
|
Rank: 18
Priority: -- → P2
Updated•3 years ago
|
Severity: normal → S3
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → karlt
| Assignee | ||
Comment 2•2 years ago
|
||
https://github.com/WebAudio/web-audio-api/pull/624
Depends on D189101
Pushed by ktomlinson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/52f0910d6e37
use V0 for exponentialRampToValueAtTime() curve when V0 and V1 have opposite signs or V0 is zero r=padenot
Comment 4•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox120:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/42237 for changes under testing/web-platform/tests
Upstream PR merged by moz-wptsync-bot
Updated•2 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•