Bug 1458045 use V0 for exponentialRampToValueAtTime() curve when V0 and V1 have opposite signs or V0 is zero r=padenot

https://github.com/WebAudio/web-audio-api/pull/624

Depends on D189101

Differential Revision: https://phabricator.services.mozilla.com/D189204